--- a/app/src/main/res/layout/view_holder_actor.xml
+++ b/app/src/main/res/layout/view_holder_actor.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/todo"
             android:src="@drawable/robert_downey"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
