--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,6 +96,7 @@
 
     <style name="fmlStyleNameMovie">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#ECECEC</item>
     </style>
 
     <style name="fmlRatingBar" parent="Theme.AppCompat">
@@ -108,7 +109,7 @@
         <item name="android:textColor">#6D6D80</item>
     </style>
 
-    <style name="fmlCustomRatingBar" parent="@android:style/Widget.RatingBar">
+    <style name="fmlCustomRatingBar">
         <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
         <item name="android:minHeight">8dp</item>
         <item name="minHeight">8dp</item>
