--- a/app/src/main/res/layout/view_holder_actor.xml
+++ b/app/src/main/res/layout/view_holder_actor.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/viewHolderActorFoto"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:scaleType="fitXY"
             android:contentDescription="@string/todo"
             android:src="@drawable/robert_downey"
