--- a/app/src/main/res/drawable/custom_ratingbar.xml
+++ b/app/src/main/res/drawable/custom_ratingbar.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@+id/background"
+        android:id="@android:id/background"
         android:drawable="@drawable/custom_ratingbar_empty"/>
     <item
-        android:id="@+id/secondaryProgress"
+        android:id="@android:id/secondaryProgress"
         android:drawable="@drawable/custom_ratingbar_empty"/>
     <item
-        android:id="@+id/progress"
+        android:id="@android:id/progress"
         android:drawable="@drawable/custom_ratingbar_filled"/>
 </layer-list>
