--- a/app/src/main/res/layout/view_holder_actor.xml
+++ b/app/src/main/res/layout/view_holder_actor.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/viewHolderActorFoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/fmlImageActorWidth"
+        android:layout_height="@dimen/fmlImageActorHeight"
         android:contentDescription="@string/todo"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         android:src="@drawable/robert_downey"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
